--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,16 @@
 {
-  "manifest_version": 2,
-
+"manifest_version": 2,
   "name": "vaporwave lol",
   "description": "This extension will satisfy ur a e s t h e t i c needs",
   "version": "1.0",
 
   "content_scripts": [
-  {
-    "css": ["vstyle.css"]
-    }
+    {
+    "matches": [
+      "http://*/*",
+      "https://*/*"
     ],
-
-  "browser_action": {
-    "default_icon": "icon.png",
-    "default_popup": "popup.html"
-  },
- "permissions": [
-       "activeTab",
-       "https://ajax.googleapis.com/"
- ]
+    "css": ["vstyle.css"],
+    }
+  ]
 }
