--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,10 @@
         "http://*/*",
         "https://*/*"
       ],
+      "js": [
+                "content.js"
+            ],
+      "run_at": "document_end",
       "css": ["vstyle.css"]
     }
   ]
