--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,24 @@
 {
 "manifest_version": 2,
-  "name": "vaporwave lol",
+  "name": "vaporwave lel",
   "description": "This extension will satisfy ur a e s t h e t i c needs",
-  "version": "1.0",
+  "version": "1.1",
+  "icons": {
+    "16": "16.jpg",
+    "32": "32.jpg",
+    "48": "48.jpg",
+    "128": "128.jpg"
+  },
   "browser_action": {
-          "default_icon": "48.jpg",
-          "default_popup": "128.jpg" },
+          "default_icon": {
+            "16": "16.jpg",
+            "32": "32.jpg",
+            "48": "48.jpg",
+            "48": "48.jpg",
+            "128": "128.jpg"
+            },
+          "default_popup": "128.jpg" 
+          },
   "content_scripts": [
     {
       "matches": [
