--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 "manifest_version": 2,
-  "name": "vaporwave lel",
-  "description": "This extension will satisfy ur a e s t h e t i c needs",
+  "name": "v 4 p 0 r w a v 3",
+  "description": "This extension will satisfy all your a e s t h e t i c needs",
   "version": "1.1",
   "icons": {
     "16": "16.jpg",
