--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
   },
  "browser_action": {
           "default_icon": "128.png",
-          "default_popup": "128.png" 
+          "default_popup": "popup.html" 
           },
  "content_scripts": [
     {
